sidebar fixes to align social links

--- a/custom.css
+++ b/custom.css
@@ -83,6 +83,7 @@ a:visited,
 
 #social-links {
     float   : right;
+    margin-right : -20px;
 }
 
 .addthis_toolbox a {
@@ -789,6 +790,7 @@ a.button:hover, a.button.hover, a.button.active, #commentform #submit:hover, .su
 
 #sidebar {
     padding-top : 0px;
+    width : 300px;
 }
 
 #sidebar .primary {
